Corrects formatting of playlist heart icon to align with number of likes

--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -1,10 +1,24 @@
-
-
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f8f8f8;
+}
+
+#banner {
+    width: auto;
+    
+    padding: 1%;
+
+    background-color: rgb(181, 181, 181);
+
+    text-indent: 40px;
+
+    border-bottom: 5px solid black;
+}
+
+h1 {
+    margin: 0;
 }
 
 .playlist-cards {
@@ -16,7 +30,7 @@ body {
 .playlist-card {
     margin: 40px;
 
-    border: black;
+    border-color: black;
     border-style: solid;
     border-radius: 16px;
 
@@ -25,9 +39,36 @@ body {
 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
 }
 
 .playlist-cover-art {
-    padding: 5px;
+    padding: 4px;
+}
+
+.playlist-title {
+    margin-bottom: 0px;
+    margin-top: 4px;
+    margin-left: 4px;
+
+}
+
+.playlist-creator-name {
+    margin-bottom: 0px;
+    margin-top: 4px;
+    margin-left: 4px;
+}
+
+.playlist-likes-container {
+    margin-bottom: 0px;
+    margin-top: 0px;
+    margin-left: 4px;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.playlist-heart-icon {
+    padding-top: 16px;
+    padding-right: 8px;
 }
